# Charon

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml  grafana-lint.yml  release.yml  test.yml
config/: default.toml  fork.toml  testnet.toml
contracts/: .gitignore  foundry.toml
contracts/src/: CharonLiquidator.sol
contracts/src/interfaces/: IAaveV3Pool.sol  IERC20.sol  IFlashLoanSimpleReceiver.sol  ISwapRouter.sol  IVToken.sol  IWETH.sol
contracts/test/: CharonLiquidator.t.sol  CharonLiquidatorFork.t.sol
crates/charon-cli/: Cargo.toml  build.rs
crates/charon-cli/src/: main.rs
crates/charon-core/: Cargo.toml
crates/charon-core/src/: config.rs  flashloan.rs  lib.rs  profit.rs  queue.rs  traits.rs  types.rs
crates/charon-core/tests/: config_profiles.rs
crates/charon-executor/: Cargo.toml
crates/charon-executor/src/: batcher.rs  builder.rs  gas.rs  lib.rs  nonce.rs  simulation.rs  submit.rs
crates/charon-executor/tests/: simulate_fork.rs
crates/charon-flashloan/: Cargo.toml
crates/charon-flashloan/src/: aave.rs  lib.rs  router.rs
crates/charon-flashloan/tests/: aave_live.rs
crates/charon-metrics/: Cargo.toml
crates/charon-metrics/src/: lib.rs
crates/charon-metrics/tests/: scrape.rs
crates/charon-protocols/: Cargo.toml
crates/charon-protocols/src/: lib.rs  multicall.rs  venus.rs
crates/charon-protocols/tests/: venus_connect.rs  venus_fetch.rs
crates/charon-scanner/: Cargo.toml
crates/charon-scanner/src/: discovery.rs  discovery_store.rs  lib.rs  listener.rs  mempool.rs  oracle.rs  provider.rs  scanner.rs  token_meta.rs
crates/charon-scanner/tests/: chainlink_refresh.rs
deploy/compose/: .env.example  alloy-config.alloy  docker-compose.yml  local-stack.yml
deploy/grafana/: alerts.yaml  charon.json
deploy/grafana-provisioning/dashboards/: charon.yml
deploy/grafana-provisioning/datasources/: prometheus.yml
deploy/prometheus/: prometheus.yml
scripts/: RUNBOOK.txt  anvil_fork.sh  fork_replay.sh
