[workspace]
resolver = "3"
members = [
    "crates/charon-core",
    "crates/charon-executor",
    "crates/charon-flashloan",
    "crates/charon-protocols",
    "crates/charon-scanner",
    "crates/charon-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Charon Contributors"]
license = "MIT"
description = "Multi-chain flash-loan liquidation bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum / EVM interaction
alloy = { version = "0.8", features = ["full"] }

# Serialization + config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait objects
async-trait = "0.1"

# Stream adapters (StreamExt for subscription streams)
futures-util = "0.3"

# Lock-free concurrent hashmap for scanner state
dashmap = "6"

# Backoff jitter
rand = "0.8"

# Prometheus-style metrics recorder facade
metrics = "0.24"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# .env loader
dotenvy = "0.15"

# Internal crates
charon-core = { path = "crates/charon-core" }
charon-executor = { path = "crates/charon-executor" }
charon-flashloan = { path = "crates/charon-flashloan" }
charon-protocols = { path = "crates/charon-protocols" }
charon-scanner = { path = "crates/charon-scanner" }

# Workspace-wide lints. Applied to any crate that opts in with
# `[lints] workspace = true` in its own Cargo.toml.
#
# Safety invariants in CLAUDE.md (onlyOwner execute, sim gate, hot
# wallet = gas only, flash-loan atomicity) assume the bot's off-chain
# code does not silently panic on arithmetic edge cases or swallow
# errors. `unsafe_code` is forbidden outright — nothing the bot does
# needs it, and any new unsafe block should force a conscious
# exception in the owning crate.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
unwrap_used = "deny"
