[workspace]
resolver = "3"
members = [
    "crates/charon-core",
    "crates/charon-executor",
    "crates/charon-flashloan",
    "crates/charon-metrics",
    "crates/charon-protocols",
    "crates/charon-scanner",
    "crates/charon-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Charon Contributors"]
license = "MIT"
description = "Multi-chain flash-loan liquidation bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Ethereum / EVM interaction
alloy = { version = "0.8", features = ["full"] }

# Serialization + config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Secret-holding wrapper (zeroes memory on drop, redacts from Debug).
# `serde` feature lets `ChainConfig::private_rpc_*` deserialize directly
# into `SecretString` via the TOML env-substitution layer.
secrecy = { version = "0.10", features = ["serde"] }

# URL parsing (scheme validation in the submitter)
url = "2"

# HTTP client (custom headers on private-RPC transport)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async trait objects
async-trait = "0.1"

# Stream adapters (StreamExt for subscription streams)
futures-util = "0.3"

# Lock-free concurrent hashmap for scanner state
dashmap = "6"

# Backoff jitter
rand = "0.8"

# Prometheus-style metrics recorder facade
metrics = "0.24"

# Prometheus HTTP exporter — feat/22 #222 wires this into charon-metrics
# and the supervised CLI task. `default-features = false` drops the
# built-in tokio runtime hint so the workspace stays on our chosen
# tokio version; `http-listener` is the only feature we need.
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# .env loader
dotenvy = "0.15"

# Internal crates
charon-core = { path = "crates/charon-core" }
charon-executor = { path = "crates/charon-executor" }
charon-flashloan = { path = "crates/charon-flashloan" }
charon-metrics = { path = "crates/charon-metrics" }
charon-protocols = { path = "crates/charon-protocols" }
charon-scanner = { path = "crates/charon-scanner" }

# Workspace-wide lints. Applied to any crate that opts in with
# `[lints] workspace = true` in its own Cargo.toml.
#
# Safety invariants in CLAUDE.md (onlyOwner execute, sim gate, hot
# wallet = gas only, flash-loan atomicity) assume the bot's off-chain
# code does not silently panic on arithmetic edge cases or swallow
# errors. `unsafe_code` is forbidden outright — nothing the bot does
# needs it, and any new unsafe block should force a conscious
# exception in the owning crate.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"
unwrap_used = "deny"
