[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Charon command-line entrypoint"

[[bin]]
name = "charon"
path = "src/main.rs"

[dependencies]
charon-core = { workspace = true }
charon-protocols = { workspace = true }
charon-scanner = { workspace = true }
alloy = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
