[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Charon command-line entrypoint"

[[bin]]
name = "charon"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
charon-core        = { workspace = true }

[lints]
workspace = true
