[package]
name = "charon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Charon command-line entrypoint"

[[bin]]
name = "charon"
path = "src/main.rs"

[dependencies]
charon-core = { workspace = true }
charon-executor = { workspace = true }
charon-flashloan = { workspace = true }
charon-metrics = { workspace = true }
charon-protocols = { workspace = true }
charon-scanner = { workspace = true }
alloy = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
secrecy = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }

[lints]
workspace = true
