[package]
name = "charon-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transaction builder, simulator, and broadcaster for Charon"

[dependencies]
charon-core = { workspace = true }
charon-metrics = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
