[package]
name = "charon-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lending-protocol adapters for Charon (Venus, Aave, Compound, Morpho, …)"

[dependencies]
charon-core = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = { workspace = true }
