[package]
name = "charon-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chain listener and health-factor scanner for Charon"

[dependencies]
charon-core = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
