[package]
name = "charon-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chain listener and health-factor scanner for Charon"

[dependencies]
charon-core = { workspace = true }
charon-metrics = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }

[lints]
workspace = true
