[package]
name = "charon-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chain listener and health-factor scanner for Charon"

[[bin]]
name = "charon-discover"
path = "src/bin/charon-discover.rs"

[dependencies]
charon-core = { workspace = true }
charon-metrics = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
metrics = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# test-util enables `tokio::test(start_paused = true)` so backoff
# loops exercise without burning real wall-clock seconds.
tokio = { workspace = true, features = ["test-util"] }
# tempfile drives the borrower-checkpoint round-trip / corruption
# tests (#349) — keeps the assertions hermetic on CI.
tempfile = { workspace = true }

[lints]
workspace = true
